--- a/halaman-utama.html
+++ b/halaman-utama.html
@@ -6,7 +6,7 @@
     <title>Album Kenangan | SMP 2 KALIWUNGU 2025</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="website icon" type="png" href="guru/foto-guru/profil.png">
+    <link rel="website icon" type="png" href="kenangan/file.png">
      <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
